fix stylesbg.css & styles.css : html foreground contrast

--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,7 @@
   html {
     font-family: Poppins, serif;
     font-size: 1rem;
+    color: #1a30ff;
   }
 
   input {
