--- a/stylesbg.css
+++ b/stylesbg.css
@@ -218,6 +218,7 @@
   html {
     font-family: Poppins, serif;
     font-size: 1rem;
+    color: #1a30ff;
   }
 
   input {
@@ -347,10 +348,11 @@
   }
 
   .resume-link :hover {
-    background-size: 300%;
-    background-color: #6070ff;
-    border-radius: 15%;
-    transition: 0.24s;
+    transition: 900ms;
+    background-color: blue;
+    transform: scaleX(1);
+    width: 100%;
+    height: 100;
   }
 
   .resume-link :active {
